--- a/package.json
+++ b/package.json
@@ -80,5 +80,8 @@
     "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
     "sass-loader": "^10.0.1"
+  },
+  "engines": {
+    "node": "^14"
   }
 }
